--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,6 +9,8 @@
     margin-left: 250px;
     align-self: center;
     padding: 0;
+    cursor: pointer;
+    border-radius: 2px;
 }
   
 .profile__add-button:hover {
