--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,6 +1,6 @@
 .popup__button {
   width: 358px;
-  height: 50px;
+  min-height: 50px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -10,16 +10,18 @@
   color: #FFFFFF;
   margin: 18px 0 0;
   transition: opacity .5s ease;
+  cursor: pointer;
+  border-radius: 2px; 
 }
   
   .popup__button:hover {
-    opacity: .6;
+    opacity: .3;
   }
   
   @media screen and (max-width: 768px) {
     .popup__button {
       width: 238px;
-      margin: 15px 0 0;
+      margin: 15px auto;
       font-size: 14px;
       line-height: 17px;
     }
