--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -9,10 +9,11 @@
   background-color: transparent;
   background-position: center;
   transition: opacity .5s ease;
+  cursor: pointer;
 }
   
   .popup__close:hover {
-    opacity: .5;
+    opacity: .6;
   }
   
   @media screen and (max-width: 767px) {
