--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,5 @@
 .popup__container {
   max-width: 430px;
-  min-height: 330px;
   width: 100%;
   background-color: #FFFFFF;
   position: relative;
@@ -12,6 +11,7 @@
 @media screen and (max-width: 768px) {
   .popup__container {
     max-width: 282px;
-    padding: 25px 19px 25px 19px;
+    padding: 25px 19px 25px;
+    margin-right: auto;
   }
 }
