--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   border: 1px solid #FFFFFF;
   transition: opacity .3s ease;
+  cursor: pointer;
 }
   
 .profile__edit-button:hover {
