--- a/blocks/profile/__info-job/profile__info-job.css
+++ b/blocks/profile/__info-job/profile__info-job.css
@@ -6,7 +6,10 @@
   margin: 8px 0 0 0;
   padding: 0;
   text-align: start;
-  color: #FFFFFF; 
+  color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
   
 @media screen and (max-width: 767px) {
