--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -6,6 +6,9 @@
   text-align: start;
   margin: 0;
   color: #FFFFFF;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
   
  @media screen and (max-width: 767px) {
@@ -13,5 +16,6 @@
     font-size: 27px;
     line-height: 33px;
     margin-left: 46px;
+    padding-bottom: 10px;
   }
 }
