--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,6 +2,7 @@
   max-width: 430px;
   width: 100%;
   background-color: #FFFFFF;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
   box-sizing: border-box;
   padding: 34px 36px 37px;
